public interface Predator {
    /**
     * @param a Animal that we want to know if this animal preys on
     * @return boolean to show if animal preys on specified Animal a
     */
    public boolean preysOn(Animal a);
}
