public interface Trainable {

    /**
     * doATrick() returns a string description of a trick the animal can do.
     * @return String representation of a trick the animal can do
     */
    public String doATrick();

}
